Fix vertical align css

--- a/src/App.scss
+++ b/src/App.scss
@@ -35,5 +35,7 @@
 }
 
 .ins-c-sources__row-vertical-centered {
-  vertical-align: middle !important;
+  td {
+    vertical-align: middle !important;
+  }
 }
